[package]
name = "med"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
eframe = { version = "0.25.0", features = ["persistence"] }
egui_extras = { version = "0.25.0", features = ["datepicker"] }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum = "0.26.1"
strum_macros = "0.26.1"
